force-app/main/default/objects/LeadCompetitor__c/LeadCompetitor__c.object-meta.xml
<CustomObject>
    <label>LeadCompetitor</label>
    <nameField>
        <displayFormat>LC -{000000000}</displayFormat>
        <label>LC#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LeadCompetitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>