force-app/main/default/objects/LeadCompetitor__c/fields/AccountCompetitor__c.field-meta.xml
<CustomField>
    <fullName>AccountCompetitor__c</fullName>
    <label>Account Competitor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>LeadCompetitors</relationshipLabel>
    <relationshipName>LeadCompetitors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>