force-app/main/default/objects/LeadCompetitor__c/fields/Associated_Case__c.field-meta.xml
<CustomField>
    <fullName>Associated_Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Associated Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>LeadCompetitors</relationshipLabel>
    <relationshipName>Associated_Case</relationshipName>
    <type>Lookup</type>
</CustomField>