force-app/main/default/objects/LeadCompetitor__c/fields/Associated_Contact__c.field-meta.xml
<CustomField>
    <fullName>Associated_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>teijsisdfjsidf</errorMessage>
        <filterItems>
            <field>$Source.Quoate__c</field>
            <operation>greaterThan</operation>
            <value>100</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>LeadCompetitors</relationshipLabel>
    <relationshipName>LeadCompetitors</relationshipName>
    <type>Lookup</type>
</CustomField>