force-app/main/default/objects/LeadCompetitor__c/fields/Associated_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Associated_Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Associated Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>LeadCompetitors</relationshipLabel>
    <relationshipName>Associated_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>