force-app/main/default/objects/LeadCompetitor__c/fields/cross_object_opportunity__c.field-meta.xml
<CustomField>
    <fullName>cross_object_opportunity__c</fullName>
    <formula>Associated_Opportunity__r.ExpectedRevenue</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>cross object opportunity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>