force-app/main/default/objects/LeadCompetitor__c/fields/Customer_Interest__c.field-meta.xml
<CustomField>
    <fullName>Customer_Interest__c</fullName>
    <label>Customer Interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blacklisted</fullName>
                <default>true</default>
                <label>Blacklisted</label>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>Partially ok</fullName>
            </value>
            <value>
                <fullName>Previous issues</fullName>
            </value>
            <value>
                <fullName>Willing to sign the contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>