force-app/main/default/objects/LeadCompetitor__c/fields/Possibility_of_winning_the_contract__c.field-meta.xml
<CustomField>
    <fullName>Possibility_of_winning_the_contract__c</fullName>
    <label>Possibility of winning the contract</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>