force-app/main/default/objects/LeadCompetitor__c/fields/Quoate__c.field-meta.xml
<CustomField>
    <fullName>Quoate__c</fullName>
    <label>Quoate</label>
    <precision>17</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>