force-app/main/default/objects/LeadCompetitor__c/fields/Source_Lead__c.field-meta.xml
<CustomField>
    <fullName>Source_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>LeadCompetitors</relationshipLabel>
    <relationshipName>LeadCompetitors</relationshipName>
    <type>Lookup</type>
</CustomField>